# MeshDetacher

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/algorithm/: MeshSplitter.cpp  MeshSplitter.hpp
src/cli/: CLIParser.cpp  CLIParser.hpp
src/io/: MeshIO.cpp  MeshIO.hpp
